AM_CXXFLAGS = -Wall -Weffc++ -std=c++0x -I../include

lib_LIBRARIES = libnwc-toolkit.a

libnwc_toolkit_a_SOURCES = \
	character-encoding.cc \
	character-reference.cc

libnwc_toolkit_a_includedir = $(includedir)/nwc-toolkit
libnwc_toolkit_a_include_HEADERS = \
	../include/nwc-toolkit/bzip2-coder.h \
	../include/nwc-toolkit/char-cond.h \
	../include/nwc-toolkit/char-filter.h \
	../include/nwc-toolkit/char-table.h \
	../include/nwc-toolkit/char-type.h \
	../include/nwc-toolkit/character-encoding.h \
	../include/nwc-toolkit/character-reference.h \
	../include/nwc-toolkit/coder.h \
	../include/nwc-toolkit/darts.h \
	../include/nwc-toolkit/gzip-coder.h \
	../include/nwc-toolkit/int-traits.h \
	../include/nwc-toolkit/string-builder.h \
	../include/nwc-toolkit/string-hash.h \
	../include/nwc-toolkit/string-pool.h \
	../include/nwc-toolkit/string.h \
	../include/nwc-toolkit/xz-coder.h
