AM_CXXFLAGS = -Wall -Weffc++ -std=c++0x -I../include

lib_LIBRARIES = libnwc-toolkit.a

libnwc_toolkit_a_SOURCES = \
  bzip2-coder.cc \
  character-encoding.cc \
  character-reference.cc \
  gzip-coder.cc \
  html-document.cc \
  html-archive-entry.cc \
  input-file.cc \
  output-file.cc \
  text-filter.cc \
  token-trie.cc \
  unicode-normalizer.cc \
  xz-coder.cc

libnwc_toolkit_a_includedir = $(includedir)/nwc-toolkit
libnwc_toolkit_a_include_HEADERS = \
  ../include/nwc-toolkit/bzip2-coder.h \
  ../include/nwc-toolkit/char-cond.h \
  ../include/nwc-toolkit/char-filter.h \
  ../include/nwc-toolkit/char-table.h \
  ../include/nwc-toolkit/char-type.h \
  ../include/nwc-toolkit/character-encoding.h \
  ../include/nwc-toolkit/character-reference.h \
  ../include/nwc-toolkit/coder.h \
  ../include/nwc-toolkit/darts.h \
  ../include/nwc-toolkit/gzip-coder.h \
  ../include/nwc-toolkit/html-document-attribute.h \
  ../include/nwc-toolkit/html-document-unit.h \
  ../include/nwc-toolkit/html-document.h \
  ../include/nwc-toolkit/html-archive-entry.h \
  ../include/nwc-toolkit/input-file.h \
  ../include/nwc-toolkit/int-traits.h \
  ../include/nwc-toolkit/mecab-archive-entry.h \
  ../include/nwc-toolkit/output-file.h \
  ../include/nwc-toolkit/string-builder.h \
  ../include/nwc-toolkit/string-hash.h \
  ../include/nwc-toolkit/string-pool.h \
  ../include/nwc-toolkit/string.h \
  ../include/nwc-toolkit/text-archive-entry.h \
  ../include/nwc-toolkit/text-filter.h \
  ../include/nwc-toolkit/token-map.h \
  ../include/nwc-toolkit/token-trie.h \
  ../include/nwc-toolkit/unicode-normalizer.h \
  ../include/nwc-toolkit/xz-coder.h
