AM_CXXFLAGS = -Wall -Weffc++ -I../include `icu-config --cppflags`
AM_LDFLAGS = `icu-config --ldflags`

TESTS = \
  test-char-cond \
  test-char-filter \
  test-char-table \
  test-char-type \
  test-character-encoding \
  test-character-reference \
  test-coder \
  test-darts \
  test-file-io \
  test-heap-queue \
  test-html-document \
  test-html-document-attribute \
  test-html-document-unit \
  test-html-archive-entry \
  test-iconv \
  test-int-traits \
  test-mecab-archive-entry \
  test-multikey-sort \
  test-ngram-counter \
  test-sha1-digest \
  test-string \
  test-string-builder \
  test-string-hash \
  test-string-pool \
  test-text-archive-entry \
  test-text-filter \
  test-token-map \
  test-token-trie \
  test-token-trie-node \
  test-token-trie-tracer \
  test-unicode-normalizer

noinst_PROGRAMS = $(TESTS)

test_char_cond_SOURCES = test-char-cond.cc
test_char_cond_LDADD = ../lib/libnwc-toolkit.a

test_char_filter_SOURCES = test-char-filter.cc
test_char_filter_LDADD = ../lib/libnwc-toolkit.a

test_char_table_SOURCES = test-char-table.cc
test_char_table_LDADD = ../lib/libnwc-toolkit.a

test_char_type_SOURCES = test-char-type.cc
test_char_type_LDADD = ../lib/libnwc-toolkit.a

test_character_encoding_SOURCES = test-character-encoding.cc
test_character_encoding_LDADD = ../lib/libnwc-toolkit.a

test_character_reference_SOURCES = test-character-reference.cc
test_character_reference_LDADD = ../lib/libnwc-toolkit.a

test_coder_SOURCES = test-coder.cc
test_coder_LDADD = ../lib/libnwc-toolkit.a

test_darts_SOURCES = test-darts.cc
test_darts_LDADD = ../lib/libnwc-toolkit.a

test_file_io_SOURCES = test-file-io.cc
test_file_io_LDADD = ../lib/libnwc-toolkit.a

test_heap_queue_SOURCES = test-heap-queue.cc
test_heap_queue_LDADD = ../lib/libnwc-toolkit.a

test_html_document_SOURCES = test-html-document.cc
test_html_document_LDADD = ../lib/libnwc-toolkit.a

test_html_document_attribute_SOURCES = test-html-document-attribute.cc
test_html_document_attribute_LDADD = ../lib/libnwc-toolkit.a

test_html_document_unit_SOURCES = test-html-document-unit.cc
test_html_document_unit_LDADD = ../lib/libnwc-toolkit.a

test_html_archive_entry_SOURCES = test-html-archive-entry.cc
test_html_archive_entry_LDADD = ../lib/libnwc-toolkit.a

test_iconv_SOURCES = test-iconv.cc
test_iconv_LDADD = ../lib/libnwc-toolkit.a

test_int_traits_SOURCES = test-int-traits.cc
test_int_traits_LDADD = ../lib/libnwc-toolkit.a

test_mecab_archive_entry_SOURCES = test-mecab-archive-entry.cc
test_mecab_archive_entry_LDADD = ../lib/libnwc-toolkit.a

test_multikey_sort_SOURCES = test-multikey-sort.cc
test_multikey_sort_LDADD = ../lib/libnwc-toolkit.a

test_ngram_counter_SOURCES = test-ngram-counter.cc
test_ngram_counter_LDADD = ../lib/libnwc-toolkit.a

test_sha1_digest_SOURCES = test-sha1-digest.cc
test_sha1_digest_LDADD = ../lib/libnwc-toolkit.a

test_string_SOURCES = test-string.cc
test_string_LDADD = ../lib/libnwc-toolkit.a

test_string_builder_SOURCES = test-string-builder.cc
test_string_builder_LDADD = ../lib/libnwc-toolkit.a

test_string_hash_SOURCES = test-string-hash.cc
test_string_hash_LDADD = ../lib/libnwc-toolkit.a

test_string_pool_SOURCES = test-string-pool.cc
test_string_pool_LDADD = ../lib/libnwc-toolkit.a

test_text_archive_entry_SOURCES = test-text-archive-entry.cc
test_text_archive_entry_LDADD = ../lib/libnwc-toolkit.a

test_text_filter_SOURCES = test-text-filter.cc
test_text_filter_LDADD = ../lib/libnwc-toolkit.a

test_token_map_SOURCES = test-token-map.cc
test_token_map_LDADD = ../lib/libnwc-toolkit.a

test_token_trie_SOURCES = test-token-trie.cc
test_token_trie_LDADD = ../lib/libnwc-toolkit.a

test_token_trie_node_SOURCES = test-token-trie-node.cc
test_token_trie_node_LDADD = ../lib/libnwc-toolkit.a

test_token_trie_tracer_SOURCES = test-token-trie-tracer.cc
test_token_trie_tracer_LDADD = ../lib/libnwc-toolkit.a

test_unicode_normalizer_SOURCES = test-unicode-normalizer.cc
test_unicode_normalizer_LDADD = ../lib/libnwc-toolkit.a
